# cog-task

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/workflows/: ci.yml
example/audio/: description.txt  task.ron
example/audio_video/: task.ron
example/basic/: description.txt  task.ron
example/benchmark/: description.txt  task.ron
example/dummy/: long-description.text  question-1.ron
example/dummy/data/: instruction-2.txt  sample-6s.flac
example/ffmpeg/: description.txt  task.ron
example/full/: description.txt  task.ron
example/full/data/: video.mono.mov
example/function/: task.ron
example/function/data/: blocking_update.py  factorials.py  factorials_init.py  lazy_update.py  primes.py  primes_eval.py  primes_init.py
example/gstreamer/: description.txt  task.ron
example/incorrect_task/: task.ron
example/process/: task.ron
example/process/data/: repeater  repeater.go
src/: assets.rs  benchmark.rs  callback.rs  config.rs  env.rs  error.rs  io.rs  launcher.rs  lib.rs  logger.rs  message.rs  queue.rs  server.rs  signal.rs  style.rs  system.rs  template.rs  util.rs
src/action/: audio.rs  counter.rs  de.rs  fixation.rs  image.rs  include.rs  instruction.rs  key_logger.rs  macros.rs  mod.rs  nop.rs  props.rs  question.rs  simple.rs  stream.rs  video.rs
src/action/core/: audio.rs  branch.rs  clock.rs  counter.rs  delayed.rs  event.rs  fixation.rs  function.rs  horizontal.rs  image.rs  instruction.rs  key_logger.rs  logger.rs  math.rs  merge.rs  mod.rs  nil.rs  par.rs  pointer.rs  process.rs  question.rs  reaction.rs  rect.rs  repeat.rs  seq.rs  stack.rs  stream.rs  switch.rs  template.rs  timeout.rs  timer.rs  until.rs  vertical.rs  video.rs  view.rs  wait.rs
src/action/extra/: mod.rs
src/action/include/: audio.rs  counter.rs  delayed.rs  event.rs  fixation.rs  image.rs  instruction.rs  key_logger.rs  nil.rs  nop.rs  par.rs  question.rs  reaction.rs  seq.rs  simple.rs  stream.rs  switch.rs  template.rs  timeout.rs  video.rs  view.rs  wait.rs
src/action/resource/: address.rs  audio.rs  color.rs  key.rs  mod.rs  stream.rs  value.rs  video.rs
src/action/resource/backend/: gst.rs  mod.rs
src/action/resource/math/: fasteval.rs  mod.rs
src/action/resource/stream/: mod.rs
src/assets/: launcher.css  license.txt  mod.rs  server.css
src/backend/: ffmpeg.rs  gst.rs  mod.rs
src/comm/: mod.rs  queue.rs  signal.rs
src/gui/: mod.rs  style.rs  template.rs
src/launcher/: mod.rs
src/resource/: address.rs  audio.rs  color.rs  image.rs  key.rs  logger.rs  mask.rs  mod.rs  optional.rs  stream.rs  text.rs  trigger.rs  value.rs  video.rs
src/resource/audio/: mod.rs  rodio.rs
src/resource/function/: fasteval.rs  mod.rs  python.rs  savage.rs
src/resource/image/: mask.rs  mod.rs  texture.rs
src/resource/math/: fasteval.rs  mod.rs  savage.rs
src/resource/stream/: ffmpeg.rs  gst.rs  mod.rs
src/scheduler/: flow.rs  graph.rs  info.rs  mod.rs  monitor.rs  processor.rs
src/server/: activity.rs  cleanup.rs  env.rs  info.rs  loading.rs  mod.rs  selection.rs  startup.rs
src/server/io/: logger.rs  mod.rs
src/server/page/: activity.rs  cleanup.rs  loading.rs  mod.rs  selection.rs  startup.rs
src/server/scheduler/: mod.rs  p_async.rs  p_sync.rs
src/server/task/: block.rs  config.rs  mod.rs
src/style/: mod.rs
src/task/: block.rs  mod.rs
src/util/: benchmark.rs  helper.rs  mod.rs  system.rs
task/dummy/: description.text  short-description.text  task.ron
task/dummy/data/: instruction-1.txt
