[package]
name = "cog-task"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/menoua/cog-task-rs"
description = "CogTask: a general-purpose low-latency application to serve cognitive tasks"
exclude = [".*", "/task"]
rust-version = "1.64"
default-run = "cog-launcher"
autobins = false

[dependencies]
eyre = "0.6"
eframe = { version = "0.19", features = ["persistence"] }
egui_extras = { version = "0.19", features = ["serde"] }
egui_demo_lib = { version = "0.19", features = ["serde"] }
resvg = "0.24"
usvg = "0.24"
tiny-skia = "0.8"
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "ico", "tiff"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
ron = "0.8"
itertools = "0.10"
rodio = "0.16"
chrono = "0.4"
heck = "0.4"
spin_sleep = "1.1"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.26"
gstreamer = { version = "0.19" }
gstreamer-app = { version = "0.19" }
ffmpeg-next = { version = "5.1", features = ["default"] } # look into "static" feature
glib = "0.16"
num-rational = "0.4"
num-traits = "0.2"
thiserror = "1.0"
regex = "1.6"
native-dialog = "0.6"
once_cell = "1.13"
paste = "1.0"

[build-dependencies]
itertools = "0.10"
heck = "0.4"

[features]
benchmark = []

[[bin]]
name = "cog-launcher"
path = "src/bin/launcher.rs"

[[bin]]
name = "cog-server"
path = "src/bin/server.rs"

#[package.metadata.nix]
#systems = ["x86_64-linux"]
#app = true
#build = true
#runtimeLibs = [
#    "vulkan-loader",
#    "wayland",
#    "wayland-protocols",
#    "libxkbcommon",
#    "xorg.libX11",
#    "xorg.libXrandr",
#    "xorg.libXi", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base",
#]
#buildInputs = ["libxkbcommon", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base"]
