[package]
name = "cog-task"
version = "1.2.0"
authors = ["Menoua Keshishian <menoua.keshishian@gmail.com>"]
edition = "2021"
description = "A general-purpose low-latency application to run cognitive tasks"
license = "MIT"
repository = "https://github.com/menoua/cog-task"
documentation = "https://docs.rs/cog-task"
readme = "README.md"
exclude = [".*", "/example", "/LOGO1.svg", "/LOGO2.svg"]
rust-version = "1.67"
default-run = "cog-launcher"
autobins = false

[dependencies]
eyre = "0.6.8"
eframe = { version = "0.21.3", features = ["persistence"] }
egui_extras = { version = "0.21.0" }
egui_demo_lib = { version = "0.21.0", features = ["serde"] }
cpufeatures = "0.2.5"
resvg = "0.29.0"
usvg = "0.29.0"
tiny-skia = "0.8.3"
image = { version = "0.24.5", features = ["jpeg", "png", "gif", "bmp", "ico", "tiff"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.93"
serde_yaml = "0.9.18"
ron = "0.8.0"
itertools = "0.10.5"
rodio = { version = "0.17.1", optional = true }
chrono = "0.4.23"
heck = "0.4.1"
spin_sleep = "1.1.1"
sha2 = "0.10.6"
hex = "0.4.3"
sysinfo = "0.28.2"
native-dialog = "0.6.3"
glib = { version = "0.17.2", optional = true }
gstreamer = { version = "0.20.2", optional = true }
gstreamer-app = { version = "0.20.0", optional = true }
ffmpeg-next = { version = "5.1.1", features = ["default"], optional = true } # look into "static" feature
num-rational = "0.4.1"
num-traits = "0.2.15"
thiserror = "1.0.38"
regex = "1.7.1"
once_cell = "1.17.1"
paste = "1.0.11"
rustybuzz = "0.7.0"
fasteval = "0.2.4"
savage_core = { version = "0.2.0", optional = true }
cpython = { version = "0.7.1", optional = true, features = ["serde-convert", "default", "python3-sys"] }
cfg-if = "1.0.0"

[build-dependencies]
itertools = "0.10.5"
regex = "1.7.1"
heck = "0.4.1"

[features]
default = []
rodio = ["dep:rodio", "audio"]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:glib", "stream"]
ffmpeg = ["dep:ffmpeg-next", "stream"]
savage = ["dep:savage_core"]
python = ["dep:cpython"]
audio = []
stream = []

[[bin]]
name = "cog-launcher"
path = "src/bin/launcher.rs"

[[bin]]
name = "cog-server"
path = "src/bin/server.rs"

# [package.metadata.docs.rs]
# features = ["full"]

[package.metadata.nix]
systems = ["x86_64-linux"]
app = true
build = true
#runtimeLibs = [
#    "vulkan-loader",
#    "wayland",
#    "wayland-protocols",
#    "libxkbcommon",
#    "xorg.libX11",
#    "xorg.libXrandr",
#    "xorg.libXi", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base",
#]
#buildInputs = ["libxkbcommon", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base"]
